fastmetrics-derive/tests/ui/fail/label_index_mapping/skip_field_without_default.stderr
error[E0277]: the trait bound `NoDefault: Default` is not satisfied
 --> tests/ui/fail/label_index_mapping/skip_field_without_default.rs:5:26
  |
5 | #[derive(LabelSetSchema, LabelIndexMapping)]
  |                          ^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `NoDefault`
  |
  = help: see issue #48214
  = note: this error originates in the derive macro `LabelIndexMapping` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NoDefault` with `#[derive(Default)]`
  |
3 + #[derive(Default)]
4 | struct NoDefault;
  |
